Fix spacing for H1 on smaller displays

--- a/src/sass/components/_text.scss
+++ b/src/sass/components/_text.scss
@@ -20,9 +20,12 @@ h1 {
   }
 
   margin: 0!important;
-  padding: $spacer-large-md 0 0;
+  padding: $spacer-large-sm 0 0;
   &:first-child {
     padding: 0;
+  }
+  @media (min-width: $bp-md) {
+    padding: $spacer-large-md 0 0;
   }
 
   a {
